<resources>
    <string name="app_name">Raza Shop</string>
    <string name="the_rightAddress_text">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality_text">It is now very easy to reach the\nbest quality among the \n products on the internet!</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="account_text">Don\'t have an account? Register</string>
    <string name="login_text">Let\'s Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="facebook_text">FaceBook</string>
    <string name="google_text">Google</string>
    <string name="register_text">Let\'s Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_login">If already have account Please Login!</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_send">We will send you the password reset link to your email</string>
    <string name="cancel_text">Cancel</string>
    <string name="send_text">Send</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="search_now">Search Now</string>
    <string name="see_product">See product</string>
    <string name="_2000">$2000</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_1600">$1600</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="chair">Chair</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_icon">closeIcon</string>
    <string name="product_name">Product Name</string>
    <string name="rs_1600">Rs. 1600</string>
    <string name="product_description">Product Description</string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="s">S</string>
    <string name="_1">1</string>
    <string name="_50">$50</string>
    <string name="l">L</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="check_out">Check out</string>
    <string name="_150">$150</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="rs">Rs.%1$s</string>
    <string name="close_button">Close button</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_hint">Address location Ex: Home</string>
    <string name="full_name_hint">Full Name</string>
    <string name="street_hint">Street</string>
    <string name="city_hint">City</string>
    <string name="province_hint">Province</string>
    <string name="phone_hint">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="raza_shop_dose_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">Raza Shop dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="full_address">Full Address</string>
    <string name="my_account">My account</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="close">close</string>
    <string name="edit_profile">edit\n</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="order">Order #%1$d</string>
    <string name="order_address">%1$s %2$s</string>
    <string name="g_search_now">Search Now</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_categories">Categories</string>
    <string name="scan_icon">Scan icon</string>
    <string name="microphone_icon">Microphone icon</string>
    <string name="new_price">Rs.%1$s</string>
</resources>